update openapi swagger
